Fixed middle button spacing

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@
 
 #clickButton{
 	text-align: center;
-	padding-top: 50%;
 }
 
 #redTeamTable{
